docker/kubernets/app-fintrack-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-fintrack-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-fintrack-web
  template:
    metadata:
      labels:
        app: app-fintrack-web
    spec:
      containers:
        - name: app-fintrack-web
          image: fintrack-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-fintrack-web
spec:
  ports:
    - port: 80
  selector:
    app: app-fintrack-web
