docker/kubernets/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-fintrack-web-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fintrack.test.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-fintrack-web
                port:
                  number: 80
          - path: /financeiro
            pathType: Prefix
            backend:
              service:
                name: app-fintrack
                port:
                  number: 8080
